--- a/jbpm-case-mgmt/jbpm-case-mgmt-cmmn/pom.xml
+++ b/jbpm-case-mgmt/jbpm-case-mgmt-cmmn/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-case-mgmt</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-case-mgmt-cmmn</artifactId>
   
