--- a/jbpm-case-mgmt/jbpm-case-mgmt-impl/pom.xml
+++ b/jbpm-case-mgmt/jbpm-case-mgmt-impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-case-mgmt</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-case-mgmt-impl</artifactId>
   <name>jBPM :: Case Management Impl</name>
