--- a/jbpm-container-test/jbpm-in-container-test/jbpm-container-integration-deps/rest/pom.xml
+++ b/jbpm-container-test/jbpm-in-container-test/jbpm-container-integration-deps/rest/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-container-integration-deps</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>idep-rest</artifactId>
