--- a/jbpm-container-test/jbpm-remote-ejb-test/jbpm-remote-ejb-test-app/pom.xml
+++ b/jbpm-container-test/jbpm-remote-ejb-test/jbpm-remote-ejb-test-app/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>jbpm-remote-ejb-test</artifactId>
     <groupId>org.jbpm</groupId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>jbpm-remote-ejb-test-app</artifactId>
