--- a/jbpm-container-test/jbpm-remote-ejb-test/pom.xml
+++ b/jbpm-container-test/jbpm-remote-ejb-test/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-container-test</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>jbpm-remote-ejb-test</artifactId>
@@ -26,7 +26,7 @@
       <dependency>
         <groupId>org.jbpm</groupId>
         <artifactId>jbpm-remote-ejb-test-domain</artifactId>
-        <version>${version.org.kie}</version>
+        <version>${project.version}</version>
       </dependency>
       <!-- Override necessary to be compatible with jboss-remote-naming
            Must put this here so it only overrides version in EJB tests -->
