--- a/jbpm-container-test/jbpm-remote-ejb-test/test-kjar-parent/pom.xml
+++ b/jbpm-container-test/jbpm-remote-ejb-test/test-kjar-parent/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>jbpm-remote-ejb-test</artifactId>
     <groupId>org.jbpm</groupId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>test-kjar-parent</artifactId>
