--- a/jbpm-document/pom.xml
+++ b/jbpm-document/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>jbpm</artifactId>
     <groupId>org.jbpm</groupId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>jbpm-document</artifactId>
