--- a/jbpm-event-emitters/jbpm-event-emitters-kafka/pom.xml
+++ b/jbpm-event-emitters/jbpm-event-emitters-kafka/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-event-emitters</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-event-emitters-kafka</artifactId>
   <name>jBPM :: Event Emitters :: Kafka</name>
