--- a/jbpm-human-task/jbpm-human-task-jpa/pom.xml
+++ b/jbpm-human-task/jbpm-human-task-jpa/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-human-task</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-human-task-jpa</artifactId>
   <packaging>bundle</packaging>
