--- a/jbpm-persistence/jbpm-persistence-jpa/pom.xml
+++ b/jbpm-persistence/jbpm-persistence-jpa/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-persistence</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>jbpm-persistence-jpa</artifactId>
