--- a/jbpm-services/jbpm-executor-cdi/pom.xml
+++ b/jbpm-services/jbpm-executor-cdi/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-services</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-executor-cdi</artifactId>
   <name>jBPM :: Executor Service CDI add-ons</name>
