--- a/jbpm-services/jbpm-services-cdi/pom.xml
+++ b/jbpm-services/jbpm-services-cdi/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-services</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-services-cdi</artifactId>
   <name>jBPM :: CDI Services</name>
