--- a/jbpm-services/jbpm-services-ejb/jbpm-executor-ejb/pom.xml
+++ b/jbpm-services/jbpm-services-ejb/jbpm-executor-ejb/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-services-ejb</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-executor-ejb</artifactId>
   <name>jBPM :: Executor Service EJB add-ons</name>
