--- a/jbpm-services/jbpm-services-ejb/jbpm-services-ejb-api/pom.xml
+++ b/jbpm-services/jbpm-services-ejb/jbpm-services-ejb-api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-services-ejb</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
   <artifactId>jbpm-services-ejb-api</artifactId>
   <name>jBPM :: EJB Services API</name>
