--- a/jbpm-test-coverage/pom.xml
+++ b/jbpm-test-coverage/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>jbpm-test-coverage</artifactId>
