--- a/jbpm-workitems/jbpm-workitems-core/pom.xml
+++ b/jbpm-workitems/jbpm-workitems-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm-workitems</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <artifactId>jbpm-workitems-core</artifactId>
