--- a/jbpm-xes/pom.xml
+++ b/jbpm-xes/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.jbpm</groupId>
     <artifactId>jbpm</artifactId>
-    <version>7.74.1.Final</version>
+    <version>7.74.1.SB3</version>
   </parent>
 
   <name>jBPM :: XES Exporter</name>
